added more test + classes/methods names fixed